--- a/apps/dev/funpod/funpod.yaml
+++ b/apps/dev/funpod/funpod.yaml
@@ -9,6 +9,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: funpod
+  namespace: funpod-dev
 spec:
   replicas: 1
   selector:
@@ -38,6 +39,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: funpod
+  namespace: funpod-dev
 spec:
   selector:
     app: funpod
